# doc2struct

./: README.md  pyproject.toml
src/doc2struct/: __init__.py  main.py
