[project]
name = "doc2struct"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dakoro", email = "david.korobetski@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fire>=0.7.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "python-docx>=1.2.0",
    "sentence-transformers>=5.1.0",
]

[project.scripts]
doc2struct = "doc2struct.main:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
